--- a/Spring-App/src/main/resources/templates/login.html
+++ b/Spring-App/src/main/resources/templates/login.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<!-- <meta name="_csrf" content="${_csrf.token}"></meta>
+<meta name="_csrf_header" content="${_csrf.headerName}"></meta> -->
 <head></head>
 <body>
    <h1>Login</h1>
-   <form name='f' method='POST'>
+   <form name='f' th:action="@{/login}" method='POST'>
       <table>
          <tr>
             <td>User:</td>
@@ -17,9 +19,13 @@
             <td><input name="submit" type="submit" value="submit"></input></td>
          </tr>
       </table>
-       <input type="hidden" 
+       <!-- <input type="hidden" 
            th:name="${_csrf.parameterName}" 
-           th:value="${_csrf.token}" />
+           th:value="${_csrf.token}" /> -->
   </form>
+    <p>New User?  Please Register..</p><a href="/register">Register Now</a>
+<!--     <input type="hidden" 
+           th:name="${_csrf.parameterName}" 
+           th:value="${_csrf.token}" /> -->
 </body>
 </html>
